# example_rust_web_service

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: test_api.sh
src/: README.md  config.rs  lib.rs  main.rs
src/api/: README.md  auth.rs  feed.rs  mod.rs  notify.rs  top.rs
src/auth/: README.md  extractor.rs  jwt.rs  mod.rs  password.rs
src/db/: README.md  mod.rs  mongodb.rs  mysql.rs  redis.rs
src/entities/: feed.rs  feed_like.rs  mod.rs  user.rs
src/jobs/: README.md  handlers.rs  mod.rs  top_stats.rs
src/kafka/: EVENTS.md  README.md  consumer.rs  events.rs  mod.rs  producer.rs
src/kafka/events/: README.md
src/models/: README.md  feed.rs  mod.rs  user.rs
src/services/: README.md  notification.rs
tests/: api_test.rs
