[package]
name = "example_rust_web_service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - ORM
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "chrono"] }
# Keep sqlx for migrations and raw queries if needed
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "chrono"], optional = true }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Swagger/OpenAPI
# Enable `chrono` feature so utoipa knows how to generate schema for `chrono::DateTime`
utoipa = { version = "4.2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Password hashing
argon2 = "0.5"

[dev-dependencies]
actix-rt = "2.9"
actix-web = "4.4"
futures = "0.3"
once_cell = "1.19"

